# questgen

./: LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: run_tests.yml
helpers/: example.py  visuzlizer.py
questgen/: actions.py  analysers.py  examples.py  exceptions.py  facts.py  graph_drawer.py  knowledge_base.py  logic.py  machine.py  records.py  relations.py  requirements.py  restrictions.py  selectors.py  transformators.py  utils.py
questgen/quests/: base_quest.py  caravan.py  collect_debt.py  complex.py  delivery.py  help.py  help_friend.py  hometown.py  hunt.py  interfere_enemy.py  pilgrimage.py  quests_base.py  search_smith.py  simple.py  simplest.py  spying.py
questgen/tests/: __init__.py  actions_tests.py  facts_tests.py  helpers.py  knowledge_base_tests.py  machine_tests.py  quest_tests.py  records_tests.py  requirements_tests.py  restrictions_tests.py  selectors_tests.py  simple_quest_tests.py  transformators_tests.py
tests/: test_draw.py
